light-video/Nginx.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: light-video-nginx-service
  name: light-video-nginx-service
spec:
  selector:
    app: light-video-nginx
  ports:
    - name: http
      port: 81
      protocol: TCP
      targetPort: 81
  type: ClusterIP
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: light-video-nginx-service
    service: light-video-nginx
  name: light-video-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: light-video-nginx
      service: light-video-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: light-video-nginx
        service: light-video-nginx
    spec:
      containers:
        - image: 'nginx:1.9.12'
          imagePullPolicy: IfNotPresent
          name: light-video-nginx
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: light-video-nginx-configmap
          name: nginx-config
