light-video/light-video.yml
apiVersion: v1
kind: Service
metadata:
  name: light-video-resin-service
spec:
  selector:
    app: light-video-resin-1
  ports:
    - port: 7001
      protocol: TCP
      targetPort: 7001
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: light-video-resin-1
  name: light-video-resin-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: light-video-resin-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: light-video-resin-1
    spec:
      containers:
        - env:
            - name: JAVA_HOME
              value: /usr/java/jdk1.6.0_38
          image: light-video:latest
          imagePullPolicy: IfNotPresent
          name: light-video-resin-1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
