light-video/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-first-virtual-service
spec:
  hosts:
    - x-light.pcvideo.com.cn:81
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: light-video-resin-service.default.svc.cluster.local
            port:
              number: 7001
